[package]
name = "helm-nuke"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "crdgen"
path = "src/crdgen.rs"

[dependencies]
kube = { version = "0.91.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.22.0", features = ["latest"] }
tokio = { version = "1.37.0", features = ["full"] }
serde_yaml = "0.9.34"
schemars = "0.8.21"
serde_json = "1.0.117"
serde = { version = "1.0.203", features = ["derive"] }
anyhow = "1.0.86"
thiserror = "1.0.61"
tracing = "0.1.40"
futures = { features = ["async-await"] }
humantime = "2.1.0"
chrono = "0.4.38"
